2011-11-07  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: use toString as the Date object description.
        https://bugs.webkit.org/show_bug.cgi?id=71605

        Reviewed by Yury Semikhatsky.

        Test: inspector/remote-object.html

        * inspector/InjectedScriptSource.js:
        (.):

2011-10-26  Andrey Kosyakov  <caseq@chromium.org>

        Web Inspector: [refactoring] get JS-specific methods out of SourceFrame
        https://bugs.webkit.org/show_bug.cgi?id=70885

        Reviewed by Pavel Feldman.

        No new tests, as there's no new functionality.

        * inspector/front-end/JavaScriptSourceFrame.js:
        (WebInspector.JavaScriptSourceFrame):
        (WebInspector.JavaScriptSourceFrame.prototype.willHide):
        (WebInspector.JavaScriptSourceFrame.prototype.requestContent):
        (WebInspector.JavaScriptSourceFrame.prototype.canEditSource):
        (WebInspector.JavaScriptSourceFrame.prototype.suggestedFileName):
        (WebInspector.JavaScriptSourceFrame.prototype.editContent):
        (WebInspector.JavaScriptSourceFrame.prototype.contentChanged):
        (WebInspector.JavaScriptSourceFrame.prototype.setReadonly):
        (WebInspector.JavaScriptSourceFrame.prototype.populateLineGutterContextMenu.addConditionalBreakpoint.didEditBreakpointCondition):
        (WebInspector.JavaScriptSourceFrame.prototype.populateLineGutterContextMenu.):
        (WebInspector.JavaScriptSourceFrame.prototype.populateLineGutterContextMenu.else.editBreakpointCondition.didEditBreakpointCondition):
        (WebInspector.JavaScriptSourceFrame.prototype.populateLineGutterContextMenu.else):
        (WebInspector.JavaScriptSourceFrame.prototype.populateLineGutterContextMenu):
        (WebInspector.JavaScriptSourceFrame.prototype.populateTextAreaContextMenu):
        (WebInspector.JavaScriptSourceFrame.prototype.afterTextChanged):
        (WebInspector.JavaScriptSourceFrame.prototype.beforeTextChanged):